# sixfirhy

./: .gitmodules  CMakeLists.txt  ImgView.qml  Info.plist  README.md  TagDisplay.qml  argsprovider.cpp  argsprovider.h  macapplication.cpp  macapplication.h  main.cpp  main.qml  qml.qrc  sixfirhy.icns  sixfirhy.pro  tagprovider.cpp  tagprovider.h
